FIX: NeoForge 1.21.1 needs to handle non minecraft dependencies
The neoforge needs to 
// This adds the library to all the runs
    additionalRuntimeClasspath 'com.example:example:1.0'

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ neoForge {
 dependencies {
     // HiveMQ MQTT Client
     implementation 'com.hivemq:hivemq-mqtt-client:1.3.3'
+    additionalRuntimeClasspath 'com.hivemq:hivemq-mqtt-client:1.3.3'
 }
 
 tasks.withType(ProcessResources).configureEach {
